# tellos_ffc

./: README.md
rviz/: bag.rviz  real.rviz  sim.rviz
sh/: formation_flight.sh  formation_flight_lqr.sh  joystick_operation.sh  land.sh  motion_capture.sh  multiple_tellos_sim.sh  params  real_system.sh  takeoff.sh  target_sender.sh  tello_drivers.sh
tello_driver/: CMakeLists.txt
tello_driver/launch/: tello_node.launch
tello_driver/nodes/: tello_driver_node
tello_driver/src/TelloPy/tellopy/_internal/: tello.py
tello_navi/: CMakeLists.txt  package.xml
tello_navi/include/tello_navi/: FormationFlightUtility.h  LQR.h
tello_navi/launch/: formation_flight.launch  formation_flight_lqr.launch  joy_ope_node.launch  land.launch  lqr_hovering.launch  simple_tello_sim.launch  system.launch  takeoff.launch  target_sender.launch  tf_markers.launch
tello_navi/scripts/: tello_wifi_access.py
tello_navi/src/: formation_flight.cpp  formation_flight_lqr.cpp  formation_flight_utility.cpp  joy_ope_node.cpp  land.cpp  lqr_hovering.cpp  pose_dumper.cpp  simple_tello_sim.cpp  takeoff.cpp  target_sender.cpp  tf_markers.cpp
vrpn_client_ros/launch/: tellos_mocap.launch
